# pythaiidcard

./: .gitignore  CLAUDE.md  FLUTTER_LIBRARY_RESEARCH.md  PREPARE_PUBLIC_RELEASE.md  PUBLISHING.md  README.md  UPDATE_SUMMARY.md  codemagic.yaml  main.py  mise.toml  mkdocs.yml  pyproject.toml
api_server/: auth.py  main.py
api_server/routes/: api.py
api_server/services/: card_monitor.py
chrome-extension/: README.md  background.js  content-script.js  generate_icons.py  manifest.json  popup.html  popup.js  styles.css
debug/: README.md  app.py  app_compact.py
desktop_client/: pairing_dialog.py  settings.py  tray_app.py
docs/: api-reference.md  index.md  installation.md  troubleshooting.md  usage.md
playground/thai_idcard_reader_test/: CLAUDE.md  README.md  codemagic.yaml
playground/thai_idcard_reader_test/lib/: main.dart
playground/thai_idcard_reader_test/lib/constants/: thai_id_commands.dart
playground/thai_idcard_reader_test/lib/models/: thai_id_card.dart
playground/thai_idcard_reader_test/lib/utils/: apdu_parser.dart  date_converter.dart  encoding_utils.dart
playground/thai_idcard_reader_test/lib/widgets/: debug_log_entry.dart  debug_section.dart
pythaiid/: __init__.py  cli.py  constants.py  exceptions.py  reader.py
pythaiidcard/: __init__.py
web_app/: app.js  index.html  styles.css
